crates/atlas-runtime/tests/corpus/pass/modules/chained_import/main.atl
// Test: chained imports (main -> middle -> base)
import { DOUBLED } from "./middle";

print(DOUBLED);
