crates/atlas-runtime/tests/corpus/fail/modules/circular_import/main.atl
// Test: circular dependency should fail
import { a_val } from "./a";

print(a_val);
